# cmpt201-coursework

./: CMakeLists.txt  server.c
lab0/.nvim/: lab0.c.2025-05-19T10:37:29-07:00.hash  lab0.c.2025-05-19T10:37:29-07:00.nvim  lab0.c.2025-05-19T10:41:29-07:00.hash  lab0.c.2025-05-19T10:41:29-07:00.nvim
lab1/: lab1.c  lab1Practice.c  lb  lp
lab1/.nvim/: lab1.c.2025-05-25T12:30:39-07:00.hash  lab1.c.2025-05-25T12:30:39-07:00.nvim  lab1.c.2025-05-25T12:31:03-07:00.hash  lab1.c.2025-05-25T12:31:03-07:00.nvim  lab1.c.2025-05-25T12:32:02-07:00.hash  lab1.c.2025-05-25T12:32:02-07:00.nvim  lab1.c.2025-05-25T12:35:16-07:00.hash  lab1.c.2025-05-25T12:35:16-07:00.nvim  lab1.c.2025-05-25T12:37:17-07:00.hash  lab1.c.2025-05-25T12:37:17-07:00.nvim  lab1.c.2025-05-25T12:38:10-07:00.hash  lab1.c.2025-05-25T12:38:10-07:00.nvim  lab1.c.2025-05-25T12:39:01-07:00.hash  lab1.c.2025-05-25T12:39:01-07:00.nvim  lab1.c.2025-05-25T12:39:48-07:00.hash  lab1Practice.c.2025-05-21T15:43:51-07:00.hash  lab1Practice.c.2025-05-21T15:43:51-07:00.nvim  lab1Practice.c.2025-05-21T15:45:29-07:00.hash  lab1Practice.c.2025-05-21T15:45:29-07:00.nvim  lab1Practice.c.2025-05-21T15:46:52-07:00.hash  lab1Practice.c.2025-05-21T15:46:52-07:00.nvim  lab1Practice.c.2025-05-21T15:51:35-07:00.hash  lab1Practice.c.2025-05-21T15:51:35-07:00.nvim  lab1Practice.c.2025-05-21T15:54:29-07:00.hash  lab1Practice.c.2025-05-21T15:54:29-07:00.nvim  (+4 more)
lab2/: lab2  lab2.c  test.c
lab3/: lab3  lab3.c
lab4/: lab4  lab4.c
lab5/: lab5.c
lab6/: e1  e2  example_2.c
lab7/: lab7.c
lab9/: client.c  server.c
(+52 files in other folders)
